<resources>
    <string name="app_name">Color Notes</string>

    <string name="slider_title_one">Welcome</string>
    <string name="slider_title_two">Possibilities</string>
    <string name="slider_title_three">Free App</string>


    <string name="slider_desc_one">Remember everything important.\nA central place for notes, ideas, lists, reminders.</string>
    <string name="slider_desc_two">Creating, Editing, deleting a Text note.</string>
    <string name="slider_desc_three">Best of all, it’s completely free.</string>
    <string name="btn_login">Login</string>
    <string name="btn_singup">Sing Up</string>
    <string name="sing_up_quize">Already have an Account? </string>
    <string name="login_quize">Don’t have an account?</string>
    <string name="add_note">Add Note</string>
    <string name="note_desc">Description</string>
    <string name="note_title">Title</string>
    <string name="note">Notes</string>
    <string name="email_address">Email Address</string>
    <string name="save">Save</string>
    <string name="your_name">Your Name</string>
    <string name="password">Password</string>
    <string name="all_notes">All Notes</string>
    <string name="delete_question">Do you want to delete this note?</string>
    <string name="delete_note">Delete Note</string>
    <string name="save_question">Do you want to save change to note?</string>
    <string name="btn_save">Save</string>
    <string name="btn_discard">Discard</string>
    <string name="btn_cansel">Cansel</string>
    <string name="your_bio">Your Bio</string>
    <string name="sing_out_q">Do you want to sing out this account?</string>
    <string name="cansel">Cansel</string>
    <string name="sing_out">Sing out</string>
    <string name="no_note1">Here is no note available.</string>
    <string name="no_note2">Click on `+` to add a new note.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>