<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="340dp"
        android:layout_height="145dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:background="@color/white">

            <TextView
                android:id="@+id/question_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="25dp"
                android:fontFamily="@font/arlrbbd"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/save_question"
                android:textColor="@color/dark_gray"
                android:textSize="16dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:paddingRight="10dp">

                <TextView
                    android:id="@+id/btn_cansell"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/arlrbbd"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:layout_marginLeft="8dp"
                    android:text="@string/btn_cansel"
                    android:textColor="@android:color/holo_red_dark"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/btn_discard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/arlrbbd"
                    android:text="@string/btn_discard"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:layout_marginLeft="8dp"/>

                <TextView
                    android:id="@+id/btn_save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/arlrbbd"
                    android:gravity="center"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:text="@string/btn_save"
                    android:layout_marginLeft="5dp"
                    android:textColor="@color/darkgreen"
                    android:textSize="18sp" />

            </LinearLayout>

        </RelativeLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>