<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@drawable/back_login">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:duplicateParentState="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.396"
        tools:layout_editor_absoluteX="16dp">

        <TextView
            android:id="@+id/login_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="3dp"
            android:fontFamily="@font/arlrbbd"
            android:text="@string/btn_login"
            android:textColor="@color/gray"
            android:textSize="24sp"
            android:textStyle="bold"
            android:padding="5dp"/>

        <ImageView
            android:id="@+id/image"
            android:layout_width="339dp"
            android:layout_height="214dp"
            android:layout_below="@id/login_title"
            android:layout_centerHorizontal="true"
            android:paddingBottom="15dp"
            android:src="@drawable/login_img" />

        <EditText
            android:id="@+id/emailaddress"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/image"
            android:layout_centerHorizontal="true"
            android:background="@drawable/background_edit_text"
            android:drawableLeft="@drawable/ic_email"
            android:drawablePadding="8dp"
            android:ems="10"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            android:padding="14dp"
            android:textColor="@color/purple"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/emailaddress"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="18dp"
            android:background="@drawable/background_edit_text"
            android:drawableLeft="@drawable/ic_lock"
            android:drawablePadding="8dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="14dp"
            android:textSize="14sp"
            android:textColor="@color/purple"/>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_below="@id/password"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="18dp"
            android:background="@drawable/back_button"
            android:backgroundTint="@color/purple"
            android:fontFamily="@font/arlrbbd"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:text="@string/btn_login" />

        <LinearLayout
            android:id="@+id/line1"
            android:layout_marginTop="20dp"
            android:layout_centerInParent="true"
            android:layout_below="@id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="66dp"
            tools:layout_editor_absoluteY="625dp">

            <TextView
                android:id="@+id/question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/btn_login"
                android:text="@string/login_quize"
                android:textColor="@color/black"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/btn_singup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/question"
                android:text="Sign up"
                android:paddingLeft="8dp"
                android:textStyle="bold"
                android:textColor="@color/purple"
                android:textSize="16dp" />
        </LinearLayout>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>