<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.HomeFragment"
    android:background="@color/white">

    <RelativeLayout
        android:id="@+id/user"
        android:layout_width="match_parent"
        android:layout_height="163dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="75dp"
            android:layout_height="75dp"
            app:cardCornerRadius="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_alignParentRight="true">

            <ImageView
                android:id="@+id/image_profile"
                android:scaleType="centerCrop"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/profile"/>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="38dp"
            android:layout_marginLeft="20dp"
            android:fontFamily="@font/arlrbbd"
            android:text="@string/your_name"
            android:textColor="@color/purple"
            android:textSize="18sp"
            android:padding="3dp"/>
        <TextView
            android:id="@+id/user_email"
            android:layout_below="@id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="21dp"
            android:text="@string/email_address"
            android:fontFamily="@font/arlrbbd"
            android:textSize="14sp"
            android:padding="3dp"/>

        <LinearLayout
            android:paddingLeft="30dp"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:padding="10dp"
                android:fontFamily="@font/arlrbbd"
                android:textSize="18sp"
                android:text="@string/all_notes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

    </RelativeLayout>

    <ScrollView
        android:id="@+id/scroll_note"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="162dp"
        android:orientation="vertical"
        android:background="@color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/user">

        <RelativeLayout
            android:background="@color/transparent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:paddingTop="10dp"
            android:paddingRight="5dp"
            android:paddingBottom="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RelativeLayout
                android:id="@+id/nothing"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="440dp"
                android:background="@color/white">

                <ImageView
                    android:id="@+id/no_note"
                    android:layout_width="120dp"
                    android:layout_height="200dp"
                    android:src="@drawable/dont_notes"
                    android:layout_marginTop="45dp"
                    android:layout_centerHorizontal="true"/>

                <TextView
                    android:id="@+id/txt1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/no_note"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/arlrbbd"
                    android:padding="5dp"
                    android:layout_centerHorizontal="true"
                    android:text="@string/no_note1"
                    android:textSize="18sp"/>

                <TextView
                    android:id="@+id/txt2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txt1"
                    android:layout_marginTop="0dp"
                    android:fontFamily="@font/arlrbbd"
                    android:padding="5dp"
                    android:layout_marginBottom="10dp"
                    android:layout_centerHorizontal="true"
                    android:text="@string/no_note2"
                    android:textSize="18sp" />
            </RelativeLayout>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerview_notes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:paddingBottom="5dp"
                tools:listitem="@layout/note_item">

            </androidx.recyclerview.widget.RecyclerView>

            <RelativeLayout
                android:paddingTop="10dp"
                android:layout_below="@id/recyclerview_notes"
                android:layout_width="match_parent"
                android:layout_height="83dp"
                android:background="@color/transparent">

            </RelativeLayout>

        </RelativeLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>