<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddNotesActivity"
    android:background="@color/white">


    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/star"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:layout_marginRight="15dp"
            android:src="@drawable/ic_outline_star" />

        <TextView
            android:layout_width="129dp"
            android:layout_height="42dp"
            android:layout_centerInParent="true"
            android:fontFamily="@font/arlrbbd"
            android:gravity="center"
            android:text="@string/add_note"
            android:textColor="@color/black"
            android:textSize="22sp" />

        <ImageView
            android:id="@+id/back_home"
            android:layout_width="30dp"
            android:layout_height="28dp"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:layout_marginLeft="10dp"
            android:src="@drawable/ic_back" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
        tools:layout_editor_absoluteX="32dp">

        <EditText
            android:id="@+id/note_title"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="8dp"
            android:textColor="@color/black"
            android:background="@drawable/back_edit_note"
            android:ems="10"
            android:hint="@string/note_title"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="74dp"
            tools:layout_editor_absoluteY="202dp" />

        <EditText
            android:id="@+id/note_desc"
            android:layout_width="match_parent"
            android:layout_height="540dp"
            android:layout_below="@id/note_title"
            android:background="@drawable/back_edit_note"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/note"
            android:textColor="@color/black"
            android:inputType="textMultiLine"
            android:textSize="20sp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:backgroundTint="@color/purple"
            android:clickable="true"
            app:srcCompat="@drawable/ic_edit" />


    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>