<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".EditNoteActivity">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="3dp"
        android:layout_centerHorizontal="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/e_star"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:layout_marginRight="66dp"
            android:src="@drawable/ic_outline_star" />

        <ImageView
            android:id="@+id/e_back_home"
            android:layout_width="30dp"
            android:layout_height="28dp"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:layout_marginLeft="10dp"
            android:src="@drawable/ic_back" />

        <ImageView
            android:id="@+id/delete"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:layout_marginRight="20dp"
            android:src="@drawable/ic_delete" />

        <Button
            android:id="@+id/save"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:fontFamily="@font/arlrbbd"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:layout_marginRight="120dp"
            android:background="@drawable/background_edit_text"
            android:src="@drawable/ic_outline_star"
            android:text="@string/save"
            android:textColor="@color/white"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#FFFFFF"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
        tools:layout_editor_absoluteX="32dp">

        <EditText
            android:id="@+id/e_note_title"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/back_edit_note"
            android:ems="10"
            android:hint="@string/note_title"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="74dp"
            tools:layout_editor_absoluteY="202dp" />

        <EditText
            android:id="@+id/e_note_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/e_note_title"
            android:background="@drawable/back_edit_note"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/note"
            android:inputType="textMultiLine"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <RelativeLayout
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:padding="5dp">

            <LinearLayout
                android:layout_alignParentRight="true"
                android:id="@+id/modified"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:fontFamily="@font/arlrbbd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Last modified"
                    android:textColor="@color/purple"
                    android:textSize="12sp"/>

                <TextView
                    android:id="@+id/data_modified"
                    android:textColor="@color/purple"
                    android:fontFamily="@font/arlrbbd"
                    android:paddingLeft="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1399/12/12"
                    android:textSize="12sp"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/created"
                android:layout_alignParentRight="true"
                android:layout_below="@id/modified"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp">

                <TextView
                    android:textColor="@color/purple"
                    android:fontFamily="@font/arlrbbd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Created at"
                    android:textSize="12sp"/>

                <TextView
                    android:id="@+id/data_created"
                    android:textColor="@color/purple"
                    android:fontFamily="@font/arlrbbd"
                    android:paddingLeft="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1399/12/12"
                    android:textSize="12sp"/>
            </LinearLayout>

        </RelativeLayout>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>